[package]
name = "rust-web-framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos_reactive = { version = "0.2.5", features = ["stable"] }
wasm-bindgen = "0.2.84"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Element",
    "Document",
    "Event",
    "console",
    "HtmlBodyElement",
    "Text",
]
