[package]
name = "rust-web-framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos_reactive = { version = "0.2.5", features = ["stable"] }
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Element",
    "Document",
    "Event",
    "console",
    "HtmlBodyElement",
    "Text",
]
